# ChangeLog for app-admin/syslog-ng
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.23 2003/03/05 14:25:28 agriffis Exp $

*syslog-ng-1.6.0_rc1 (05 Mar 2003)

  05 Mar 2003; Aron Griffis <agriffis@gentoo.org> syslog-ng-1.6.0_rc1.ebuild:
  Update to latest stable release candidate for bug #14335

*syslog-ng-1.5.26-r1 (27 Feb 2003)

  27 Feb 2003; Aron Griffis <agriffis@gentoo.org> syslog-ng-1.5.26-r1.ebuild,
  files/syslog-ng.rc6:
  Fix bug 16308 by adding a reload() function to the init script. Bumped the
  masked revision to pick up the change. Thanks to Michael Sterrett for his
  work debugging and providing the patch.  Also added ~alpha to KEYWORDS.

*syslog-ng-1.5.26 (09 Feb 2003)

  09 Feb 2003; Bruce A. Locke <blocke@shivan.org> syslog-ng-1.5.26.ebuild:
  Version Bump

  09 Feb 2003; Bruce A. Locke <blocke@shivan.org> syslog-ng-1.4.16-r1.ebuild, syslog-ng-1.4.17.ebuild:
  Removed message about syslog2ng script which is only found in 1.5.x

  21 Jan 2003; Aron Griffis <agriffis@gentoo.org> syslog-ng-1.4.16-r1.ebuild:
  Revision bump to pick up new initscript on the stable package.

  21 Jan 2003; Aron Griffis <agriffis@gentoo.org> syslog-ng-1.5.24-r1.ebuild files/syslog-ng.rc6 :
  Add a pause after stopping syslog-ng to allow it to stop, particularly in
  case it's restarting.  This is particularly important when using logrotate.
  Bumped the revision to get the new initscript installed.  Closes #14310

*syslog-ng-1.5.24 (26 Dec 2002)

  26 Dec 2002 Martin Holzer <mholzer@gentoo.org> syslog-ng-1.5.24.ebuild files/digest-syslog-ng-1.5.24 ChangeLog : 
  Version Pumped. Closes #12714.

 
*syslog-ng-1.4.17 (05 Nov 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

  05 Nov 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*syslog-ng-1.4.16 (25 Oct 2002)

  04 Nov 2002; Seemant Kulleen <Seemant@gentoo.org> *.ebuild :
