@@ -1,0 +1,1 @@
+MD5 9deb2c4401ded0fa1c3484339abd285b syslog-ng-1.6.0rc1.tar.gz 289040
