@@ -1,6 +1,16 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.23 2003/03/05 14:25:28 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.24 2003/03/11 04:05:11 agriffis Exp $
+
+*syslog-ng-1.6.0_rc1-r1 (10 Mar 2003)
+
+  10 Mar 2003; Aron Griffis <agriffis@gentoo.org>
+  syslog-ng-1.6.0_rc1-r1.ebuild, files/syslog-ng.conf.gentoo,
+  files/syslog-ng.logrotate:
+  Bump revision to pick up new default configuration and logrotate snippet, both
+  contributed by Michael Sterrett. This relates to bug #7144. Also mark stable
+  on x86 and alpha since this is the version recommended for production use by
+  the web page.
 
 *syslog-ng-1.6.0_rc1 (05 Mar 2003)
 
